<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/ffxiv_title"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabWheel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wheel_tab" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabGardens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/garden_tab" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabsPots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pots_tab" />
        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clFragmentHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:layout_marginTop="100dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="300dp"
            android:text="@string/select_tab_placeholder"
            android:textColor="@color/dark_grey"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


<!--    <androidx.core.widget.NestedScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->

<!--        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">-->

<!--        -->
<!--    </androidx.core.widget.NestedScrollView>-->


</androidx.coordinatorlayout.widget.CoordinatorLayout>