<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WheelFragment" >

    <TextView
        android:id="@+id/tvTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/wheel_type"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFinishDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/finish_time"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTypeLabel" />

    <TextView
        android:id="@+id/tvRemainingTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/time_remaining"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFinishDateLabel" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/na"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvFinishDate"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFinishDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/na"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvRemainingTime"
        app:layout_constraintTop_toBottomOf="@+id/tvType" />

    <TextView
        android:id="@+id/tvRemainingTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:inputType="textMultiLine|textImeMultiLine"
        android:minLines="3"
        android:text="@string/na"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvRemainingTimeLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvFinishDate" />

    <!--  Top half  -->

    <View
        android:id="@+id/vwSplitter"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="32dp"
        android:background="#484848"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRemainingTimeLabel" />

    <!--  Bottom half  -->

    <TextView
        android:id="@+id/tvWheelTypeLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/wheel_type"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vwSplitter" />

    <EditText
        android:id="@+id/etType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName|textCapSentences"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/spDatePicker"
        app:layout_constraintTop_toBottomOf="@+id/vwSplitter" />

    <TextView
        android:id="@+id/tvFinishDateLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/finish_date"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/spDatePicker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spDatePicker" />

    <DatePicker
        android:id="@+id/spDatePicker"
        android:layout_width="0dp"
        android:layout_height="135dp"
        android:layout_marginEnd="32dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/spTimePicker"
        app:layout_constraintTop_toBottomOf="@+id/etType" />

    <TextView
        android:id="@+id/tvFinishTimeLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/finish_time"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/spTimePicker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spTimePicker" />

    <TimePicker
        android:id="@+id/spTimePicker"
        android:layout_width="0dp"
        android:layout_height="135dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvFinishTimeLabel2"
        app:layout_constraintTop_toBottomOf="@+id/spDatePicker" />


    <Button
        android:id="@+id/btSave"
        style="@style/cms_button_primary_large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btClearData"
        style="@style/cms_button_primary_large"
        android:layout_marginBottom="16dp"
        android:text="@string/clear_saved_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvNoData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/vwSplitter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>